# uswindpowerstats

./: .gitignore  LICENSE  README.md
data_sources/: API Documentation _ USWTDB.html  us-states-territories.csv
data_sources/API Documentation _ USWTDB_files/: fonts.min.css  highlight.js  highlightDark.css  site.js  styles.css
dataloader/: Cargo.toml
dataloader/src/: main.rs
repository/src/: models.rs
rocketserver/: Cargo.toml
rocketserver/src/: main.rs
rustworkspace/: Cargo.toml
rustworkspace/dataloader/: Cargo.toml
rustworkspace/dataloader/src/: main.rs
rustworkspace/repository/: Cargo.toml
rustworkspace/repository/src/: lib.rs  models.rs
rustworkspace/rocketserver/: Cargo.toml
rustworkspace/rocketserver/src/: main.rs  results.rs
uswindblazor/: Program.cs  _Imports.razor  uswindblazor.csproj
uswindblazor/Pages/: Index.razor
uswindblazor/Properties/: launchSettings.json
uswindblazor/Shared/: ManufacturerSelector.razor  ModelSelector.razor  NavMenu.razor  ProjectSelector.razor  UsStateSelector.razor
uswindblazor/wwwroot/: index.html
