[package]
name = "dataloader"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
logging_timer = "1.0"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
chrono = "0.4"
tiberius = "0.6"
tokio = { version = "1.11", features = ["full"] }
once_cell = "1.8"
tokio-util = { version = "0.6", features = ["compat"] }
serde-aux = "2.3"
itertools = "0.10"
