[package]
name = "repository"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8"
tiberius = "0.6"
tokio-util = { version = "0.6", features = ["compat"] }
tokio = { version = "1.11", features = ["full"] }